[gd_scene load_steps=7 format=3 uid="uid://vcdoku1x7cjg"]

[ext_resource type="Texture2D" uid="uid://cjmx1p1epr4w1" path="res://scenes/farming/farmingTilesheetComplete.png" id="1_4mu71"]
[ext_resource type="Script" path="res://Scripts/shop.gd" id="1_222po"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tpw5x"]
atlas = ExtResource("1_4mu71")
region = Rect2(96, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7acl8"]
atlas = ExtResource("1_4mu71")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfhg8"]
atlas = ExtResource("1_4mu71")
region = Rect2(16, 64, 14, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5865b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpw5x")
}],
"loop": true,
"name": &"Corn seed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7acl8")
}],
"loop": true,
"name": &"Lettuce seed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfhg8")
}],
"loop": true,
"name": &"Strawberry seed",
"speed": 5.0
}]

[node name="shop" type="CanvasLayer"]
script = ExtResource("1_222po")

[node name="Panel" type="Panel" parent="."]
offset_left = 214.0
offset_top = 148.0
offset_right = 935.0
offset_bottom = 521.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Name" type="Label" parent="Control"]
layout_mode = 0
offset_left = 512.0
offset_top = 224.0
offset_right = 639.0
offset_bottom = 250.0

[node name="Next" type="Button" parent="Control"]
layout_mode = 0
offset_left = 743.0
offset_top = 303.0
offset_right = 761.0
offset_bottom = 334.0
text = ">"

[node name="Prev" type="Button" parent="Control"]
layout_mode = 0
offset_left = 344.0
offset_top = 313.0
offset_right = 362.0
offset_bottom = 344.0
text = "<"

[node name="Buy" type="Button" parent="Control"]
layout_mode = 0
offset_left = 550.0
offset_top = 424.0
offset_right = 588.0
offset_bottom = 455.0
text = "Buy"

[node name="Cost" type="Label" parent="Control"]
layout_mode = 0
offset_left = 527.0
offset_top = 374.0
offset_right = 567.0
offset_bottom = 397.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Control"]
position = Vector2(574, 317)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_5865b")
animation = &"Lettuce seed"

[connection signal="pressed" from="Control/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Control/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Control/Buy" to="." method="_on_buy_pressed"]
